@@ -43,7 +43,6 @@
 #else
     #include <errno.h>
     #include <fcntl.h>
-    #include <semaphore.h>
     #include <sys/mman.h>
     #include <sys/stat.h>
     #include <sys/types.h>
