@@ -28,17 +28,34 @@
 #else
     #include <errno.h>
     #include <fcntl.h>
+    #include <pthread.h>
+    #include <sys/file.h>
+    #include <sys/mman.h>
     #include <sys/stat.h>
-    #include <time.h>
+    #include <sys/types.h>
+    #include <unistd.h>
 #endif /* PLATFORM_WINDOWS */
 
 namespace lsp
 {
     namespace ipc
     {
+        static constexpr uint64_t SHMUTEX_INIT_FLAG     = __IF_LEBE(0x786574756D5F6873ULL, 0x73685F6D75746578ULL); // "sh_mutex"
+
+        typedef struct shared_mutex_t
+        {
+            uint64_t            init_flag;
+            pthread_mutex_t     mutex;
+        } shared_mutex_t;
+
         SharedMutex::SharedMutex()
         {
+        #ifdef PLATFORM_WINDOWS
             hLock       = NULL;
+        #else
+            hFD         = -1;
+            hLock       = NULL;
+        #endif /* PLATFORM_WINDOWS */
             bLocked     = false;
         }
 
@@ -92,9 +109,9 @@ namespace lsp
                 return STATUS_NO_MEM;
 
             hLock = CreateMutexW(NULL, FALSE, path);
-            if (hLock != NULL)
-                return STATUS_OK;
+            return (hLock != NULL) ? STATUS_OK : STATUS_IO_ERROR;
         #else
+            int error;
             const char *path = name->get_native();
             if (name == NULL)
                 return STATUS_NO_MEM;
@@ -104,26 +121,150 @@ namespace lsp
                 S_IRGRP | S_IWGRP |
                 S_IROTH | S_IWOTH;
 
-            hLock = sem_open(path, O_CREAT, open_mode, 1);
-            if (hLock != NULL)
-                return STATUS_OK;
-
-            int error = errno;
-            switch (error)
+            // Create shared memory segment
+            int fd = shm_open(path, O_RDWR | O_CREAT, open_mode);
+            if (fd < 0)
             {
-                case EACCES: return STATUS_PERMISSION_DENIED;
-                case EEXIST: return STATUS_ALREADY_EXISTS;
-                case EINVAL: return STATUS_INVALID_VALUE;
-                case EMFILE: return STATUS_OVERFLOW;
-                case ENFILE: return STATUS_OVERFLOW;
-                case ENAMETOOLONG: return STATUS_TOO_BIG;
-                case ENOENT: return STATUS_NOT_FOUND;
-                case ENOMEM: return STATUS_NO_MEM;
-                default: break;
+                error = errno;
+                switch (error)
+                {
+                    case EACCES: return STATUS_PERMISSION_DENIED;
+                    case EEXIST: return STATUS_ALREADY_EXISTS;
+                    case EINVAL: return STATUS_INVALID_VALUE;
+                    case EMFILE: return STATUS_OVERFLOW;
+                    case ENFILE: return STATUS_OVERFLOW;
+                    case ENAMETOOLONG: return STATUS_TOO_BIG;
+                    case ENOENT: return STATUS_NOT_FOUND;
+                    case ENOMEM: return STATUS_NO_MEM;
+                    default: return STATUS_IO_ERROR;
+                }
             }
-        #endif /* PLATFORM_WINDOWS */
+            lsp_finally {
+                if (fd >= 0)
+                    ::close(fd);
+            };
 
-            return STATUS_IO_ERROR;
+            // Perform mutex initialization
+            shared_mutex_t *shmutex = NULL;
+            {
+                // Lock the shared memory segment to initialize mutex atomically
+                while (flock(fd, LOCK_EX) != 0)
+                {
+                    error = errno;
+                    switch (error)
+                    {
+                        case EBADF: return STATUS_IO_ERROR;
+                        case EINTR: break;
+                        case EINVAL: return STATUS_INVALID_VALUE;
+                        case ENOLCK: return STATUS_NO_MEM;
+                        default: return STATUS_IO_ERROR;
+                    }
+                }
+
+                // Unlock file descriptor on exit out of the scope
+                bool need_unlock = true;
+                lsp_finally {
+                    if (need_unlock)
+                        flock(fd, LOCK_UN);
+                };
+
+                // Reserve memory for the mutex
+                if (ftruncate(fd, sizeof(shared_mutex_t)) != 0)
+                {
+                    error = errno;
+                    switch (error)
+                    {
+                        case EACCES: return STATUS_PERMISSION_DENIED;
+                        case EFAULT: return STATUS_UNKNOWN_ERR;
+                        case EFBIG: return STATUS_TOO_BIG;
+                        case EINVAL: return STATUS_INVALID_VALUE;
+                        case EINTR: return STATUS_INTERRUPTED;
+                        case EIO: return STATUS_IO_ERROR;
+                        case EISDIR: return STATUS_IS_DIRECTORY;
+                        case EPERM: return STATUS_PERMISSION_DENIED;
+                        case EROFS: return STATUS_READONLY;
+                        case ETXTBSY: return STATUS_PERMISSION_DENIED;
+                        case EBADF: return STATUS_IO_ERROR;
+                        default: return STATUS_IO_ERROR;
+                    }
+                }
+
+                // Map the mutex memory
+                void *addr = mmap(0, sizeof(shared_mutex_t), PROT_READ | PROT_WRITE, MAP_SHARED, fd, 0);
+                if (addr == MAP_FAILED)
+                {
+                    error = errno;
+                    switch (error)
+                    {
+                        case EACCES: return STATUS_PERMISSION_DENIED;
+                        case EAGAIN: return STATUS_RETRY;
+                        case EPERM: return STATUS_PERMISSION_DENIED;
+                        case EFBIG: return STATUS_TOO_BIG;
+                        case EEXIST: return STATUS_ALREADY_EXISTS;
+                        case ENOMEM: return STATUS_NO_MEM;
+                        case EOVERFLOW: return STATUS_OVERFLOW;
+                        default: return STATUS_IO_ERROR;
+                    }
+                }
+                lsp_finally {
+                    if (addr != NULL)
+                        munmap(addr, sizeof(shared_mutex_t));
+                };
+
+                // Ensure that mutex is initialized
+                shmutex     = static_cast<shared_mutex_t *>(addr);
+                if (shmutex->init_flag != SHMUTEX_INIT_FLAG)
+                {
+                    // Mutex is not initialized, initialize it
+                    pthread_mutexattr_t attr;
+                    if ((error = pthread_mutexattr_init(&attr)) != 0)
+                        return STATUS_UNKNOWN_ERR;
+
+                    if ((error = pthread_mutexattr_setpshared(&attr, PTHREAD_PROCESS_SHARED) != 0))
+                    {
+                        switch (error)
+                        {
+                            case EINVAL: return STATUS_INVALID_VALUE;
+                            case ENOTSUP: return STATUS_NOT_IMPLEMENTED;
+                            default: return STATUS_UNKNOWN_ERR;
+                        }
+                    }
+                    if ((error = pthread_mutexattr_setrobust(&attr, PTHREAD_MUTEX_ROBUST)) != 0)
+                        return STATUS_UNKNOWN_ERR;
+                    if ((error = pthread_mutex_init(&shmutex->mutex, &attr)) != 0)
+                        return STATUS_UNKNOWN_ERR;
+
+                    // Mark the mutex being initialized
+                    shmutex->init_flag  = SHMUTEX_INIT_FLAG;
+                }
+
+                // Unlock the file
+                while (flock(fd, LOCK_UN) != 0)
+                {
+                    error = errno;
+                    switch (error)
+                    {
+                        case EBADF: return STATUS_IO_ERROR;
+                        case EINTR: break;
+                        case EINVAL: return STATUS_INVALID_VALUE;
+                        case ENOLCK: return STATUS_NO_MEM;
+                        default: return STATUS_IO_ERROR;
+                    }
+                }
+
+                // Do not unlock the file again
+                addr = NULL;
+                need_unlock = false;
+            }
+
+            // Now we have shared mutex and file descriptor, store them
+            hFD     = fd;
+            hLock   = shmutex;
+
+            fd      = -1;
+
+            return STATUS_OK;
+        #endif /* PLATFORM_WINDOWS */
         }
 
         status_t SharedMutex::close()
@@ -147,13 +288,22 @@ namespace lsp
         #else
             if (bLocked)
             {
-                if (sem_post(hLock) < 0)
+                int error = pthread_mutex_unlock(&hLock->mutex);
+                if (error != 0)
                     res     = update_status(res, STATUS_IO_ERROR);
                 bLocked = false;
             }
-            if (sem_close(hLock) < 0)
-                res     = update_status(res, STATUS_IO_ERROR);
+
+            // Unmap memory
+            munmap(hLock, sizeof(shared_mutex_t));
             hLock = NULL;
+
+            // Close file descriptor
+            if (hFD >= 0)
+            {
+                ::close(hFD);
+                hFD     = -1;
+            }
         #endif /* PLATFORM_WINDOWS */
 
             return res;
@@ -181,25 +331,29 @@ namespace lsp
                 default:
                     break;
             }
-        #else
-            if (sem_wait(hLock) >= 0)
-            {
-                bLocked = true;
-                return STATUS_OK;
-            }
-
-            int error = errno;
-            switch (error)
-            {
-                case EINTR: return STATUS_INTERRUPTED;
-                case EINVAL: return STATUS_INVALID_VALUE;
-                case EAGAIN: return STATUS_RETRY;
-                case ETIMEDOUT: return STATUS_TIMED_OUT;
-                default: break;
-            }
-        #endif /* PLATFORM_WINDOWS */
 
             return STATUS_UNKNOWN_ERR;
+        #else
+            int error = pthread_mutex_lock(&hLock->mutex);
+            if (error != 0)
+            {
+                switch (error)
+                {
+                    case EDEADLK: return STATUS_BAD_STATE;
+                    case EBUSY: return STATUS_LOCKED;
+                    case EOWNERDEAD:
+                    {
+                        pthread_mutex_consistent(&hLock->mutex);
+                        break;
+                    }
+                    default: return STATUS_UNKNOWN_ERR;
+                }
+            }
+
+            bLocked     = true;
+
+            return STATUS_OK;
+        #endif /* PLATFORM_WINDOWS */
         }
 
         status_t SharedMutex::lock(system::time_millis_t delay)
@@ -224,6 +378,8 @@ namespace lsp
                 default:
                     break;
             }
+
+            return STATUS_UNKNOWN_ERR;
         #else
             // sem_timedwait() is the same as sem_wait(), except that abs_timeout specifies a limit on the
             // amount of time that the call should block if the decrement cannot be immediately performed.
@@ -240,24 +396,27 @@ namespace lsp
                 timeout.tv_nsec    -= 1000000000;
             }
 
-            if (sem_timedwait(hLock, &timeout) >= 0)
+            int error = pthread_mutex_timedlock(&hLock->mutex, &timeout);
+            if (error != 0)
             {
-                bLocked = true;
-                return STATUS_OK;
+                switch (error)
+                {
+                    case EDEADLK: return STATUS_BAD_STATE;
+                    case EBUSY: return STATUS_LOCKED;
+                    case ETIMEDOUT: return STATUS_TIMED_OUT;
+                    case EOWNERDEAD:
+                    {
+                        pthread_mutex_consistent(&hLock->mutex);
+                        break;
+                    }
+                    default: return STATUS_UNKNOWN_ERR;
+                }
             }
 
-            int error = errno;
-            switch (error)
-            {
-                case EINTR: return STATUS_INTERRUPTED;
-                case EINVAL: return STATUS_INVALID_VALUE;
-                case EAGAIN: return STATUS_RETRY;
-                case ETIMEDOUT: return STATUS_TIMED_OUT;
-                default: break;
-            }
+            bLocked     = true;
+
+            return STATUS_OK;
         #endif /* PLATFORM_WINDOWS */
-
-            return STATUS_UNKNOWN_ERR;
         }
 
         status_t SharedMutex::try_lock()
@@ -282,25 +441,29 @@ namespace lsp
                 default:
                     break;
             }
-        #else
-            if (sem_trywait(hLock) >= 0)
-            {
-                bLocked     = true;
-                return STATUS_OK;
-            }
-
-            int error = errno;
-            switch (error)
-            {
-                case EINTR: return STATUS_INTERRUPTED;
-                case EINVAL: return STATUS_INVALID_VALUE;
-                case EAGAIN: return STATUS_RETRY;
-                case ETIMEDOUT: return STATUS_TIMED_OUT;
-                default: break;
-            }
-        #endif /* PLATFORM_WINDOWS */
 
             return STATUS_UNKNOWN_ERR;
+        #else
+            int error = pthread_mutex_trylock(&hLock->mutex);
+            if (error != 0)
+            {
+                switch (error)
+                {
+                    case EDEADLK: return STATUS_BAD_STATE;
+                    case EBUSY: return STATUS_RETRY;
+                    case EOWNERDEAD:
+                    {
+                        pthread_mutex_consistent(&hLock->mutex);
+                        break;
+                    }
+                    default: return STATUS_UNKNOWN_ERR;
+                }
+            }
+
+            bLocked     = true;
+
+            return STATUS_OK;
+        #endif /* PLATFORM_WINDOWS */
         }
 
         status_t SharedMutex::unlock()
@@ -316,25 +479,14 @@ namespace lsp
                 bLocked = false;
                 return STATUS_OK;
             }
-        #else
-            if (sem_post(hLock) >= 0)
-            {
-                bLocked = false;
-                return STATUS_OK;
-            }
-
-            int error = errno;
-            switch (error)
-            {
-                case EINTR: return STATUS_INTERRUPTED;
-                case EINVAL: return STATUS_INVALID_VALUE;
-                case EAGAIN: return STATUS_RETRY;
-                case ETIMEDOUT: return STATUS_TIMED_OUT;
-                default: break;
-            }
-        #endif /* PLATFORM_WINDOWS */
 
             return STATUS_UNKNOWN_ERR;
+        #else
+            pthread_mutex_unlock(&hLock->mutex);
+            bLocked     = false;
+
+            return STATUS_OK;
+        #endif /* PLATFORM_WINDOWS */
         }
 
     } /* namespace ipc */
